--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!doctype html>
 <html ng-app>
 <head>
-    <title>AngularJS Hello World</title>
+    <title>Using Directives</title>
 </head>
-    <body>
-        Name: <input type="text" ng-model="name"/>
+    <body ng-init="name='James'">
+        <div ng-hide="isHidden">
+            Name: <input type="text" ng-model="name" /> {{ name }} - <span ng-bind="name"></span>
+        </div>
+        Hide: <input type="checkbox" ng-model="isHidden" />
         <br/>
-        {{ name }}
+        <button ng-click="name='Michelle'">Change Name</button>
         <script src="angular.js"></script>
     </body>
 </html>
