--- a/index.html
+++ b/index.html
@@ -1,12 +1,31 @@
 <!doctype html>
 <html ng-app>
 <head>
-    <title>AngularJS Hello World</title>
+    <title>More on Directives</title>
+    <link href="styles.css" rel="stylesheet" type="text/css">
 </head>
-    <body>
-        Name: <input type="text" ng-model="name"/>
-        <br/>
-        {{ name }}
+<!--
+    ng-cloak
+    ng-switch
+    ng-class
+    ng-show
+-->
+    <body
+        ng-init="data={name:'James', isVisible: true, loggedIn: true, status: 'navy'}">
+
+        <div ng-cloak>
+            <div ng-switch on="data.loggedIn">
+                <div ng-switch-when="true" ng-class="data.status">
+                    Welcome {{ data.name }}
+                </div>
+                <div ng-switch-default ng-class="data.status">Login</div>
+            </div>
+            <br/>
+            <div ng-show="data.isVisible">
+                Name: <input type="text" ng-model="data.name" />
+                {{ data.name }}
+            </div>
+        </div>
         <script src="angular.js"></script>
     </body>
 </html>
