Iterating over data

--- a/index.html
+++ b/index.html
@@ -1,31 +1,29 @@
 <!doctype html>
 <html ng-app>
 <head>
-    <title>More on Directives</title>
+    <title>Iterating Over Data</title>
     <link href="styles.css" rel="stylesheet" type="text/css">
 </head>
-<!--
-    ng-cloak
-    ng-switch
-    ng-class
-    ng-show
--->
-    <body
-        ng-init="data={name:'James', isVisible: true, loggedIn: true, status: 'navy'}">
 
-        <div ng-cloak>
-            <div ng-switch on="data.loggedIn">
-                <div ng-switch-when="true" ng-class="data.status">
-                    Welcome {{ data.name }}
-                </div>
-                <div ng-switch-default ng-class="data.status">Login</div>
-            </div>
-            <br/>
-            <div ng-show="data.isVisible">
-                Name: <input type="text" ng-model="data.name" />
-                {{ data.name }}
-            </div>
-        </div>
-        <script src="angular.js"></script>
-    </body>
+<body ng-init="people=[{name: 'John', city: 'Chandler'}, {name: 'Tina', city: 'New York'}, {name: 'Tom', city: 'Rotterdam'}]">
+
+    <ul>
+        <li ng-repeat="person in people">{{ person.name }} - {{ person.city }}</li>
+    </ul>
+
+    <hr/>
+
+    <table>
+        <tr>
+            <td>Name</td>
+            <td>City</td>
+        </tr>
+        <tr ng-repeat="person in people">
+            <td>{{ person.name }}</td>
+            <td>{{ person.city }}</td>
+        </tr>
+    </table>
+
+    <script src="angular.js"></script>
+</body>
 </html>
