--- a/index.html
+++ b/index.html
@@ -5,18 +5,17 @@
     <link href="styles.css" rel="stylesheet" type="text/css">
 </head>
 
-<body ng-init="customers=[ {joined: '2000-12-02', name: 'John', city: 'New York', orderTotal: 9.9956}, {joined: '2004-08-02', name: 'Tom', city: 'Rotterdam', orderTotal: 5.356}, {joined: '2014-11-05', name: 'Piet', city: 'Amsterdam', orderTotal: 44.9123} ]">
-
+<body>
     <h2>Customers</h2>
     Filter: <input type="text" ng-model="customerFilter.name" />
     <br/><br/>
 
     <table>
         <tr>
-            <th ng-click="sortBy='name' ;reverse=!reverse">Name</th>
-            <th ng-click="sortBy='city' ;reverse=!reverse">City</th>
-            <th ng-click="sortBy='orderTotal' ;reverse=!reverse">Order Total</th>
-            <th ng-click="sortBy='joined' ;reverse=!reverse">Joined</th>
+            <th ng-click="doSort('name')">Name</th>
+            <th ng-click="doSort('city')">City</th>
+            <th ng-click="doSort('orderTotal')">Order Total</th>
+            <th ng-click="doSort('joined')">Joined</th>
         </tr>
         <tr ng-repeat="cust in customers | filter:customerFilter | orderBy:sortBy:reverse">
             <td>{{ cust.name | uppercase }}</td>
@@ -26,6 +25,26 @@
         </tr>
     </table>
 
+    <span>Total customers: {{ customers.length }}</span>
+
     <script src="angular.js"></script>
+    <script>
+        function CustomersController($scope) {
+            $scope.sortBy = 'name';
+            $scope.reverse = 'false';
+
+            $scope.customers= [
+                {joined: '2000-12-02', name: 'John', city: 'New York', orderTotal: 9.9956},
+                {joined: '2004-08-02', name: 'Tom', city: 'Rotterdam', orderTotal: 5.356},
+                {joined: '2014-11-05', name: 'Piet', city: 'Amsterdam', orderTotal: 44.9123},
+                {joined: '2014-10-11', name: 'Kees', city: 'Papendrecht', orderTotal: 12.9123}
+            ];
+
+            $scope.doSort = function(propName) {
+                $scope.sortBy=propName;
+                $scope.reverse=!$scope.reverse;
+            };
+        }
+    </script>
 </body>
 </html>
