--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
-<html ng-app>
+<html ng-app="customersApp">
 <head>
-    <title>Using Filters</title>
+    <title>Modules</title>
     <link href="styles.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -28,6 +28,7 @@
     <span>Total customers: {{ customers.length }}</span>
 
     <script src="angular.js"></script>
+    <script src="app/app.js"></script>
     <script src="app/controllers/CustomersController.js"></script>
 </body>
 </html>
