--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <script src="app/app.js"></script>
     <script src="app/controllers/CustomersController.js"></script>
     <script src="app/controllers/OrdersController.js"></script>
+    <script src="app/services/customersFactory.js"></script>
 </body>
 </html>
