--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
     <script src="app/controllers/CustomersController.js"></script>
     <script src="app/controllers/OrdersController.js"></script>
     <script src="app/services/customersFactory.js"></script>
+    <script src="app/services/customersService.js"></script>
 </body>
 </html>
