--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
     <script src="app/controllers/OrdersController.js"></script>
     <script src="app/services/customersFactory.js"></script>
     <script src="app/services/customersService.js"></script>
+    <script src="app/services/values.js"></script>
 </body>
 </html>
