--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
         </nav>
     </header>
 
-    <div ng-view></div>
+    <div ng-view class="slide-animation"></div>
 
     <script src="scripts/angular.js"></script>
     <script src="scripts/angular-route.js"></script>
+    <script src="scripts/angular-animate.js"></script>
     <script src="app/app.js"></script>
     <script src="app/controllers/CustomersController.js"></script>
     <script src="app/controllers/OrdersController.js"></script>
